--- a/style.css
+++ b/style.css
@@ -22,13 +22,13 @@ article.media-post {
 }
 
 article.media-post > p {
-  background-color: rgba(0,123,255,0.25);
+  background-color: rgba(0, 255, 106, 0.25);
   padding: 1em 2em;
 }
 
 article.media-post > header {
   padding: 1em 2em;
-  background-color: rgb(225,232,237);
+  background-color: rgb(255, 255, 255);
 }
 
 article.media-post > footer {
